--- a/Firmware/platformio.ini
+++ b/Firmware/platformio.ini
@@ -16,3 +16,4 @@ framework = arduino
 lib_deps = 
 	adafruit/Adafruit Unified Sensor@^1.1.5
 	adafruit/Adafruit BME280 Library@^2.2.2
+	adafruit/Adafruit MAX31855 library@^1.3.0
