--- a/ClockApp/ClockApp.vbproj
+++ b/ClockApp/ClockApp.vbproj
@@ -80,6 +80,12 @@
       <DependentUpon>antibug.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Configure.Designer.vb">
+      <DependentUpon>Configure.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Configure.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Main.Designer.vb">
       <DependentUpon>Main.vb</DependentUpon>
     </Compile>
@@ -105,6 +111,9 @@
   <ItemGroup>
     <EmbeddedResource Include="antibug.resx">
       <DependentUpon>antibug.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Configure.resx">
+      <DependentUpon>Configure.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.vb</DependentUpon>
