--- a/ClockApp/ClockApp.vbproj
+++ b/ClockApp/ClockApp.vbproj
@@ -113,6 +113,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Public.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="antibug.resx">
