added logo abt to take out antibug stuff

--- a/ClockApp/ClockApp.vbproj
+++ b/ClockApp/ClockApp.vbproj
@@ -164,5 +164,8 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\BrandLogoBlack.gif" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
