--- a/ClockApp/ClockApp.vbproj
+++ b/ClockApp/ClockApp.vbproj
@@ -96,6 +96,12 @@
       <DependentUpon>antibug.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="CertificateInput.Designer.vb">
+      <DependentUpon>CertificateInput.vb</DependentUpon>
+    </Compile>
+    <Compile Include="CertificateInput.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Configure.Designer.vb">
       <DependentUpon>Configure.vb</DependentUpon>
     </Compile>
@@ -140,6 +146,9 @@
   <ItemGroup>
     <EmbeddedResource Include="antibug.resx">
       <DependentUpon>antibug.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CertificateInput.resx">
+      <DependentUpon>CertificateInput.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Configure.resx">
       <DependentUpon>Configure.vb</DependentUpon>
